* Añadidas nuevas propertys.
* Nuevas palabras reservadas en el DSL: login y logout para entrar y salir de la aplicación.
* División de los logs en Daily y Auditable.
* Compresión de logs de manera automática, al tener un día de antigüedad.
* División en distintos ficheros al generar listas FAP de más de 100 elementos.
* Posibilidad de personalizar el mensaje de la página de aportación. 

h3. Versión 1.3.8

* Fixed bug al registrar aportacion de documentos.
* Fixed bug en permisos de tabla de documentos de aportación.
* Property httpTimeout en el módulo.

h3. Versión 1.3.7

* Mejoras en las transacciones en la aportación de documentación.
* Fixed bug el clasificar con registro los documentos de la aportación.
* Fixed bug en combos ManyToX.
* Cambios en la forma de generar los requerimientos.
* AED: Añadidos métodos para crear y comprobar que existen carpetas.
* Fixed bug actualizar propiedades documento clasificado.
* Modificadas las clases DatosRegistro y PlatinoRegistro.

h3. Versión 1.3.6

* Fixed bug página de Verificación.
* Se muestra más info cuando la descripción de un documento es NULL o vacía.

h3. Versión 1.3.5

* Añadidos nuevos estados de la Solicitud.
* Añadida Exclusión de la Solicitud.
* Mejorada la Visibilidad de Estados de Usuario.
* Estandarizando los nombres del dependecies.yml.
* Combo de selección de un requerimiento por descripción corta.
* Fixed Bugs en Verificación.
* Fixed Bug en los combos que tengan claves que no sean String.
* Fixed Bug al recuperar de Flash, con errores de validación, en campos no Editables.
* Fixed Bug en combo del subir archivo.
* Fixed Bugs en el PDF del borrador del Requerimiento en Verificación.
* Fixed Bug en funcion a sobreescribir para conocer los documentos condicionados automaticos en Verificación.
* Fixed Bug Upload JavaScript.
* Fixed Bug en JavaScript en PopUps manuales de Exclusión y Requerimiento.
* Fixed Bug al utilizar la Release Candidate.
* Fixed bug generación de los inits en los modelos.
