@@ -1,4 +1,0 @@
-hola
-adios
-123
-rtrt
