@@ -31,6 +31,7 @@ Para adaptar las aplicaciones a esta versión es necesario realizar cambios en e
 * Compresión de logs de manera automática, al tener un día de antigüedad.
 * División en distintos ficheros al generar listas FAP de más de 100 elementos.
 * Posibilidad de personalizar el mensaje de la página de aportación. 
+* Posibilidad de filtrar las solicitudes de la tabla que las lista.
 
 h3. Versión 1.3.8
 
